# postgres_migrator

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  db.py  db.sh  dev.Dockerfile  dev.sh  dev.sql  docker-compose.test.yml  docker-compose.yml  justfile  pgadmin_lab.py  release.Dockerfile  release.Dockerfile.dockerignore  requirements.txt  test.sh  tusker.toml
schemas/: schema.2.sql
schemas/schema.1/: schema.sql
schemas/schema.3/: schema.sql
src/: main.rs
