[package]
name = "migrator"
version = "0.4.1"
edition = "2021"

[dependencies]
postgres = "0.19"
chrono = "0.4"
regex = "*"
anyhow = "1.0"
clap = { version = "*", features = ["derive", "env"] }

[dev-dependencies]
serial_test = "*"
# https://docs.rs/assert_cmd/latest/assert_cmd/
# assert_cmd = "*"
# https://docs.rs/assert_fs/latest/assert_fs/
# assert_fs = "*"
