[package]
name = "postgres_migrator"
version = "0.6.7"
edition = "2021"
license = "MIT"
authors = ["Blaine Hansen <faichenshing@gmail.com>"]
description = "Simple postgres raw sql migration generator and manager."
homepage = "https://github.com/blainehansen/postgres_migrator"
documentation = "https://github.com/blainehansen/postgres_migrator"
repository = "https://github.com/blainehansen/postgres_migrator"
readme = "README.md"
keywords = ["postgres", "migration", "generator", "manager", "raw-sql"]
categories = ["command-line-utilities", "database"]

[dependencies]
postgres = "0.19"
postgres-native-tls = "0.5"
native-tls = "0.2"
chrono = "0.4"
regex = "1"
anyhow = "1.0"
clap = { version = "3", features = ["derive", "env"] }
walkdir = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
serial_test = "0.8"
# https://docs.rs/assert_cmd/latest/assert_cmd/
# assert_cmd = "*"
# https://docs.rs/assert_fs/latest/assert_fs/
# assert_fs = "*"
